--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@ant-design/nextjs-registry": "^1.0.0",
     "@formatjs/intl-localematcher": "^0.5.4",
     "@mapbox/mapbox-gl-geocoder": "^5.0.3",
+    "@turf/turf": "^7.2.0",
     "antd": "^5.14.1",
     "cookie": "^0.6.0",
     "gray-matter": "^4.0.3",
@@ -34,6 +35,7 @@
     "remark-parse": "^11.0.0",
     "remark-react": "^9.0.1",
     "remark-rehype": "^11.1.0",
+    "swr": "^2.3.4",
     "unified": "^11.0.4"
   },
   "devDependencies": {
