Display mining colored by recency

--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "@formatjs/intl-localematcher": "^0.5.4",
     "@mapbox/mapbox-gl-geocoder": "^5.0.3",
     "@turf/turf": "^7.2.0",
+    "@types/d3": "^7.4.3",
     "antd": "^5.14.1",
     "cookie": "^0.6.0",
+    "d3": "^7.9.0",
     "gray-matter": "^4.0.3",
     "gsap": "^3.12.5",
     "hast-util-to-jsx-runtime": "^2.3.0",
