--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-dom": "^18",
     "react-gsap": "^3.2.1",
     "react-map-gl": "^7.1.7",
+    "react-select": "^5.10.2",
     "rehype-react": "^8.0.0",
     "remark": "^15.0.1",
     "remark-html": "^16.0.1",
