--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "gsap": "^3.12.5",
     "hast-util-to-jsx-runtime": "^2.3.0",
     "js-cookie": "^3.0.5",
-    "mapbox-gl": "^3.1.2",
+    "mapbox-gl": "3.11.1",
     "marked": "^12.0.0",
     "negotiator": "^0.6.3",
     "next": "14.1.0",
@@ -33,7 +33,8 @@
     "react": "^18",
     "react-dom": "^18",
     "react-gsap": "^3.2.1",
-    "react-map-gl": "^7.1.7",
+    "react-map-gl": "7.1.7",
+    "react-select": "^5.10.2",
     "rehype-react": "^8.0.0",
     "remark": "^15.0.1",
     "remark-html": "^16.0.1",
