--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@mapbox/mapbox-gl-geocoder": "^5.0.3",
     "@turf/turf": "^7.2.0",
     "@types/d3": "^7.4.3",
+    "@types/lodash.debounce": "^4.0.9",
     "antd": "^5.14.1",
     "cookie": "^0.6.0",
     "d3": "^7.9.0",
@@ -25,6 +26,7 @@
     "gsap": "^3.12.5",
     "hast-util-to-jsx-runtime": "^2.3.0",
     "js-cookie": "^3.0.5",
+    "lodash.debounce": "^4.0.8",
     "mapbox-gl": "3.11.1",
     "marked": "^12.0.0",
     "negotiator": "^0.6.3",
