--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@ant-design/icons": "^5.3.1",
     "@ant-design/nextjs-registry": "^1.0.0",
     "@formatjs/intl-localematcher": "^0.5.4",
+    "@hotjar/browser": "^1.0.9",
     "@mapbox/mapbox-gl-geocoder": "^5.0.3",
     "@sentry/nextjs": "^10",
     "@turf/turf": "^7.2.0",
