--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "knip": "knip"
   },
   "engines": {
     "node": "22.x"
@@ -14,7 +15,6 @@
   "dependencies": {
     "@ant-design/icons": "^5.3.1",
     "@ant-design/nextjs-registry": "^1.0.0",
-    "@formatjs/intl-localematcher": "^0.5.4",
     "@hotjar/browser": "^1.0.9",
     "@mapbox/mapbox-gl-geocoder": "^5.0.3",
     "@sentry/nextjs": "^10",
@@ -22,40 +22,25 @@
     "@types/d3": "^7.4.3",
     "@types/lodash.debounce": "^4.0.9",
     "antd": "^5.14.1",
-    "cookie": "^0.6.0",
     "d3": "^7.9.0",
-    "gray-matter": "^4.0.3",
     "gsap": "^3.12.5",
-    "hast-util-to-jsx-runtime": "^2.3.0",
-    "js-cookie": "^3.0.5",
     "lodash.debounce": "^4.0.8",
     "mapbox-gl": "3.11.1",
     "marked": "^12.0.0",
-    "negotiator": "^0.6.3",
     "next": "14.2.35",
-    "nextjs-google-analytics": "^2.3.3",
-    "react": "^18",
-    "react-dom": "^18",
-    "react-gsap": "^3.2.1",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-map-gl": "7.1.7",
-    "rehype-react": "^8.0.0",
-    "remark": "^15.0.1",
-    "remark-html": "^16.0.1",
-    "remark-parse": "^11.0.0",
-    "remark-react": "^9.0.1",
-    "remark-rehype": "^11.1.0",
-    "swr": "^2.3.4",
-    "unified": "^11.0.4"
+    "swr": "^2.3.4"
   },
   "devDependencies": {
-    "@types/js-cookie": "^3.0.6",
     "@types/mapbox__mapbox-gl-geocoder": "^5.0.0",
-    "@types/negotiator": "^0.6.3",
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
+    "@types/node": "^25.3.2",
+    "@types/react": "^18.3.1",
+    "@types/react-dom": "^18.3.1",
     "eslint": "^8",
     "eslint-config-next": "14.1.0",
-    "typescript": "^5"
+    "knip": "^5.85.0",
+    "typescript": "^5.9.3"
   }
 }
